environments/dev/own/devops/app_des_3/hello-manolo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-manolo-deployment
spec:
  selector:
    matchLabels:
      greeting: hello
      department: manolo
  replicas: 3
  template:
    metadata:
      labels:
        greeting: hello
        department: manolo
    spec:
      containers:
      - name: hello
        image: "gcr.io/google-samples/hello-app:2.0"
