environments/dev/own/devops/app_des_3/hello-kubernetes-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-kubernetes
spec:
  type: NodePort
  selector:
    greeting: hello
    department: kubernetes
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
