environments/dev/own/devops/app_des_3/hello-manolo-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-manolo
spec:
  type: NodePort
  selector:
    greeting: hello
    department: manolo
  ports:
  - protocol: TCP
    port: 60000
    targetPort: 50000
