environments/dev/own/devops/app_des_3/hello-new-balance.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-new-balance
spec:
  type: NodePort
  selector:
    greeting: hello
    department: world
  ports:
  - protocol: TCP
    port: 60000
    targetPort: 50000
