environments/dev/own/devops/app_des_3/service-kong.yaml
kind: Service
apiVersion: v1
metadata:
  name: proxy-to-httpbin
spec:
  ports:
  - protocol: TCP
    port: 80
  type: ExternalName
  externalName: www.google.com
